--- a/style/style.css
+++ b/style/style.css
@@ -94,7 +94,7 @@ a{
 }
 
 section{
-    padding: 50px 0;
+    padding-top: 70px;
 }
 
 img{
@@ -104,6 +104,7 @@ img{
 
 footer{
     background-color: black;
+    margin-top: 100px;
     padding: 100px 0 50px;
 }
 
@@ -272,6 +273,8 @@ li{
 /* Section partner */
 
 .partner{
+    margin-top: 70px;
+    margin-bottom: 70px;
     display: flex;
 }
 
@@ -317,26 +320,138 @@ li{
 }
 
 /* Section Company-Partner */
-  
-.col-company{
-    flex-basis: calc(100% / 2);
 
+.company-partner{
+    display: flex;
+}
+
+.col-company{
+    flex-basis: calc(100% / 3)
+}
+
+.center{
+    padding: 50px;
+}
+
+#designit-logo{
+    width: 50%;
 }
 
 .side{
-    flex-basis: calc(100% / 3);
     display: flex;
     flex-wrap: wrap;
 }
 
-.center{
-    padding: 70px;
-    height: 500px;
-   
+.box-company{
+    flex-basis: 50%;    
 }
 
-#designit{
-    width: 50%;
+.bg-img:before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 300px;
+}
+
+.bg-designit{
+    background-image: url(../img/designit.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-asu{
+    background-image: url(../img/arizona_state_university.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-uf{
+    background-image: url(../img/university_of_florida.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-topps{
+    background-image: url(../img/topps.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-wbr{
+    background-image: url(../img/world_bicycle_relief.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-hearts{
+    background-image: url(../img/hearst_corp.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-lp{
+    background-image: url(../img/lonely_planet.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+.bg-cco{
+    background-image: url(../img/clear_channel.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    filter: invert(95%) sepia(1%) saturate(1364%) hue-rotate(148deg) brightness(109%) contrast(98%);
+}
+
+
+.bg-f5f5f5{
+    background-color: #f5f5f5;
+}
+
+.bg-a2d39b{
+    background-color: #a2d39b;
+}
+
+.bg-61082b{
+    background-color: #61082b;
+}
+
+.bg-0093ce{
+    background-color: #0093ce;
+}
+
+.bg-ff1c1c{
+    background-color: #ff1c1c;
+}
+
+.bg-d5001f{
+    background-color: #d5001f;
+}
+
+.bg-b4d0e7{
+    background-color: #b4d0e7;
+}
+
+.bg-0d2481{
+    background-color: #0d2481;
+}
+
+.bg-ffd830{
+    background-color: #ffd830;
 }
 
 /* Section Azienza */
